--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="container"></div>
     <script src="main.js">
-
     </script>
 </body>
 </html>
