Add elements to section off content
Have added a starter gameboard which contains elements that we'll have our javascript fill with values.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+        <div id="title">TicTacToe</div>
+        <div id="gameBoard">
+            <section class="boardRow">
+                <div class="marker"></div>
+                <div class="marker"></div>
+                <div class="marker"></div>
+            </section>
+            <section class="boardRow">
+                <div class="marker"></div>
+                <div class="marker"></div>
+                <div class="marker"></div>
+            </section>
+            <section class="boardRow">
+                <div class="marker"></div>
+                <div class="marker"></div>
+                <div class="marker"></div>
+            </section>
+        </div>
+    </div>
+
     <script src="main.js">
     </script>
 </body>
