--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="title">TicTacToe</div>
+        <h1 id="title">TicTacToe</h1>
         <div id="gameBoard">
             <section class="boardRow">
                 <div class="marker"></div>
