--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
         <h1 id="title">TicTacToe</h1>
         <div id="gameBoard">
             <section class="boardRow">
-                <div class="marker"></div>
-                <div class="marker"></div>
-                <div class="marker"></div>
+                <div class="marker" data-marker-position="0"></div>
+                <div class="marker" data-marker-position="1"></div>
+                <div class="marker" data-marker-position="2"></div>
             </section>
             <section class="boardRow">
-                <div class="marker"></div>
-                <div class="marker"></div>
-                <div class="marker"></div>
+                <div class="marker" data-marker-position="3"></div>
+                <div class="marker" data-marker-position="4"></div>
+                <div class="marker" data-marker-position="5"></div>
             </section>
             <section class="boardRow">
-                <div class="marker"></div>
-                <div class="marker"></div>
-                <div class="marker"></div>
+                <div class="marker" data-marker-position="6"></div>
+                <div class="marker" data-marker-position="7"></div>
+                <div class="marker" data-marker-position="8"></div>
             </section>
         </div>
     </div>
