Add elements to display user names
In addition to display what user names are I'll be adding code that will highlight the user name whose turn it is to play.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <form>
         </div>
         <button>Start/Reset</button>
+        <div id="players">
+            <span id="playerOneDisplay"></span>
+            <span id="playerTwoDisplay"></span>
+        </div>
         <div id="gameBoard">
             <section class="boardRow">
                 <div class="marker" data-marker-position="0"></div>
