--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <label for="playerTwoName">Player Two's Name:
                     <input id="playerTwoName" name="playerTwoName">
                 </label>
-                <button id="nameChange" type="button">Change</button>
+                <button id="nameChangeButton" type="button">Change</button>
             <form>
         </div>
         <button>Start/Reset</button>
