Add id value for restart button
Didn't have an attribute that would let us target this button so now we can apply a listener to invoke the reset function.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button id="nameChangeButton" type="button">Change</button>
             <form>
         </div>
-        <button>Start/Reset</button>
+        <button id="restart">Start/Reset</button>
         <div id="players">
             <span id="playerOneDisplay"></span>
             <span id="playerTwoDisplay"></span>
