Add button type to restart button
By doing this we don't have to preventDefault behaviors because now it's just a button not a submit button, because we don't need it to submit anything.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button id="nameChangeButton" type="button">Change</button>
             <form>
         </div>
-        <button id="restart">Start/Reset</button>
+        <button id="restart" type="button">Start/Reset</button>
         <div id="players">
             <span id="playerOneDisplay"></span>
             <span id="playerTwoDisplay"></span>
